Working out layout issues, almost done with the first page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,18 @@
 header {
-    background: #cccccc;
+    background: #fefff7;
     padding-left: 80px;
     padding-right: 80px;
     width: 100%;
     color: #333333;
     float: left;
+    border-bottom: solid grey;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 #me {
     background: #6ea3da;
     width: 15%;
+    height: 100%;
     padding: 20px;
     color: white;
     text-align: center;
@@ -18,36 +21,85 @@ header {
 }
 
 #headerblank {
-    width: 40%;
+    width: 38%;
     float: left;
+    visibility: hidden;
 }
 
 #nav {
     float: left;
-    background: #efeee7;
+    background: #fefff7;
     height: 30px;
     padding: 20px;
 }
 
 a {
-    text-decoration: none;
+    text-decoration: #6ea3da;;
     padding: 10px;
     font-size: 18px;
 }
 
-#main {
+#middle {
+    background-image: url("../images/brickwall.png");
     clear: both;
-    border: 10px;
-    background: #eeeeee;
+    padding: 20px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+#main {
+    background: #fefff7;
+    padding: 20px;
+    margin-left: 60px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 20px;
+    width: 50%;
+    border: 1px solid grey;
     float: left;
 }
 
 #right {
-    border: 10px;
+    background: #fefff7;
+    padding: 20px;
+    margin-left: 60px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 20px;
+    width: 20%;
     float: left;
-    background: #cccccc;
+    border: 1px solid grey;
+}
+
+#picme {
+    background: #999999;
+    float: left;
+    margin: 10px;
+}
+
+#aboutme {
+    background: #888888;
 }
 
 footer {
+    clear: both;
+    background: #999999;
+    text-align: center;
+    padding: 20px;
+    /*margin-top: 5px;*/
+    border-top: thick solid #6ea3da;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: white;
+    font-size: x-small;
+}
+
+footer:after {
+    content: "\00a9 Copyright 2017 Curtis Lytle";
+}
+
+
+
+.clearfix::after {
+    content: "";
+    display: block;
     clear: both;
 }
